Adding grades as separate endpoint and in student progress responses.
